updated activator properties

--- a/activator.properties
+++ b/activator.properties
@@ -1,8 +1,14 @@
 # The name of your template.
-name=template-template
+name=akka-http-websocket-reactive-streams
 # A descriptive name for your template
-title=Template template
+title=Akka Http with Websockets and Reactive Streams
 # A description of what your template does.  Be detailed!
-description=An Activator template to define an Activator template.  It's all very meta.
+description=An Activator template to show how Websockets can be used with Akka Http
 # A comma-separated list of tags to associate with your template
-tags=activator,template
+tags=akka-http,reactive-streams,streams,websocket,websockets,reactive-platform
+
+authorName=Ordina
+authorLink=http://www.ordina.nl
+authorLogo=
+authorBio=We are hiring!
+authorTwitter=Ordina
