First working version of Akka HTTP

--- a/activator.properties
+++ b/activator.properties
@@ -9,6 +9,6 @@ tags=akka-http,reactive-streams,streams,websocket,websockets,reactive-platform
 
 authorName=Ordina
 authorLink=http://www.ordina.nl
-authorLogo=
+authorLogo=https://raw.githubusercontent.com/J-Technologies/akka-http-websocket-activator-template/master/tutorial/ordina-logo-big.png
 authorBio=We are hiring!
 authorTwitter=Ordina
