Added hashtag websocket

--- a/activator.properties
+++ b/activator.properties
@@ -5,7 +5,7 @@ title=Akka Http with Websockets and Reactive Streams
 # A description of what your template does.  Be detailed!
 description=An Activator template to show how Websockets can be used with Akka Http
 # A comma-separated list of tags to associate with your template
-tags=akka-http,reactive-streams,streams,websocket,websockets,reactive-platform
+tags=akka,akka-persistence,akka-http,reactive-streams,streams,websocket,websockets,reactive-platform
 
 authorName=Ordina
 authorLink=http://www.ordina.nl
