added rest endpoint for getting latest tweets

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,7 +2,9 @@ akka.persistence{
   journal{
     plugin = "akka.persistence.journal.inmem"
   }
-  snapshot-store{
-    plugin = "in-memory-snapshot-store"
-  }
+  log-dead-letters = false
+//  log-dead-letters-during-shutdown = false
+//  snapshot-store{
+//    plugin = "in-memory-snapshot-store"
+//  }
 }
