added real post. removed get post

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,9 +1,12 @@
 akka.persistence{
+  log-dead-letters = off
+
+  log-dead-letters-during-shutdown = off
+
   journal{
     plugin = "akka.persistence.journal.inmem"
   }
-  log-dead-letters = false
-//  log-dead-letters-during-shutdown = false
+
 //  snapshot-store{
 //    plugin = "in-memory-snapshot-store"
 //  }
