added in memory snapshot store

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,8 +6,7 @@ akka.persistence{
   journal{
     plugin = "akka.persistence.journal.inmem"
   }
-
-//  snapshot-store{
-//    plugin = "in-memory-snapshot-store"
-//  }
+  snapshot-store{
+    plugin = "in-memory-snapshot-store"
+  }
 }
