--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,12 +1,15 @@
-akka.persistence{
+akka{
   log-dead-letters = off
-
   log-dead-letters-during-shutdown = off
 
-  journal{
-    plugin = "akka.persistence.journal.inmem"
-  }
-  snapshot-store{
-    plugin = "in-memory-snapshot-store"
+  persistence{
+  
+    journal{
+      plugin = "akka.persistence.journal.inmem"
+    }
+    
+    snapshot-store{
+      plugin = "in-memory-snapshot-store"
+    }
   }
 }
