Updated activator properties

--- a/activator.properties
+++ b/activator.properties
@@ -3,12 +3,12 @@ name=akka-http-websocket-reactive-streams
 # A descriptive name for your template
 title=Akka Http with Websockets and Reactive Streams
 # A description of what your template does.  Be detailed!
-description=An Activator template to show how Websockets can be used with Akka Http
+description=An Activator template to show how Akka Http can be used with Websockets, Akka Persistence and Reactive Streams. This template consists of two parts, a theoretical and a hands-on part. In the theoretical part you will learn about the techniques mentioned above by means of a fully working example. In the hands-on part you will test-drive your own flow.
 # A comma-separated list of tags to associate with your template
 tags=akka,akka-persistence,akka-http,reactive-streams,streams,websocket,websockets,reactive-platform
 
 authorName=Ordina
-authorLink=http://www.ordina.nl
+authorLink=http://www.ordina.com
 authorLogo=https://raw.githubusercontent.com/J-Technologies/akka-http-websocket-activator-template/master/tutorial/img/ordina-logo-big.png
-authorBio=We are hiring!
+authorBio=We do cool stuff with Scala
 authorTwitter=Ordina
